tests/snapshots/refactor_coverage__snapshots_browser_prompt_and_continue.snap
---
source: tests/refactor_coverage.rs
expression: rendered
---
== session: browser_prompt ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "browser()\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "Called from: top level \nBrowse[1]> "
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "c\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "1+1\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[1] 2\n> "
    }
  ]
}
