tests/snapshots/refactor_coverage__snapshots_pager_hits_with_images.snap
---
source: tests/refactor_coverage.rs
expression: rendered
---
== session: pager_hits_images ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\nset.seed(1)\ncat(\"# Title\\n\")\nfor (i in 1:60) cat(\"alpha line \", i, \"\\n\", sep = \"\")\nplot(1:5, type = \"l\")\nfor (i in 1:60) cat(\"beta line \", i, \"\\n\", sep = \"\")\nplot(5:1, type = \"l\")\nfor (i in 1:60) cat(\"gamma line \", i, \"\\n\", sep = \"\")\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "# Title\nalpha line 1\nalpha line 2\nalpha line 3\nalpha line 4\nalpha line 5\nalpha line 6\nalpha line 7\nalpha line 8\nalpha line 9\nalpha line 10\nalpha line 11\nalpha line 12\nalpha line 13\nalpha line 14\nalpha line 15\nalpha line 16\nalpha line 17\nalpha line 18\nalpha line 19\nalpha line 20\nalpha line 21"
    },
    {
      "type": "text",
      "text": "--More-- (Np, 12.0%, @0..293/2441)"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":hits alpha\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "#1 @293 Title\n  > alpha line 22"
    },
    {
      "type": "text",
      "text": "--More-- (Np, 12.5%, @293..307/2441)"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":seek 0\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[pager] elided output (already shown): @0..307"
    },
    {
      "type": "text",
      "text": "alpha line 23\nalpha line 24\nalpha line 25\nalpha line 26\nalpha line 27\nalpha line 28\nalpha line 29\nalpha line 30\nalpha line 31\nalpha line 32\nalpha line 33\nalpha line 34\nalpha line 35\nalpha line 36\nalpha line 37\nalpha line 38\nalpha line 39\nalpha line 40\nalpha line 41\nalpha line 42\nalpha line 43"
    },
    {
      "type": "text",
      "text": "--More-- (Np, 24.6%, @307..601/2441)"
    }
  ]
}
-- step 4 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":hits beta\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "#1 @839 Title\n  > beta line 1"
    },
    {
      "type": "text",
      "text": "--More-- (Np, 34.8%, @839..851/2441)"
    }
  ]
}
