tests/snapshots/refactor_coverage__snapshots_pager_hits_with_images@transcript.snap
---
source: tests/refactor_coverage.rs
expression: transcript
---
== session: pager_hits_images ==
1) r_repl timeout_ms=10000
>>> 
>>> set.seed(1)
>>> cat("# Title\n")
>>> for (i in 1:60) cat("alpha line ", i, "\n", sep = "")
>>> plot(1:5, type = "l")
>>> for (i in 1:60) cat("beta line ", i, "\n", sep = "")
>>> plot(5:1, type = "l")
>>> for (i in 1:60) cat("gamma line ", i, "\n", sep = "")
<<< > 
<<< > set.seed(1)
<<< > cat("# Title\n")
<<< # Title
<<< > for (i in 1:60) cat("alpha line ", i, "\n", sep = "")
<<< alpha line 1
<<< alpha line 2
<<< alpha line 3
<<< alpha line 4
<<< alpha line 5
<<< alpha line 6
<<< alpha line 7
<<< alpha line 8
<<< alpha line 9
<<< alpha line 10
<<< alpha line 11
<<< alpha line 12
<<< alpha line 13
<<< alpha line 14
<<< 
<<< [pager] elided output: @195..839
<<< 
<<< [image/png len=0]
<<< [pager] elided output: @839..1610
<<< 
<<< [image/png len=0]
<<< --More-- (Np, 10.6%, @0..287/2692)

2) r_repl timeout_ms=10000
>>> :hits alpha
<<< #1 @287 Title
<<<   > alpha line 15
<<< 
<<< --More-- (Np, 11.1%, @287..301/2692)

3) r_repl timeout_ms=10000
>>> :seek 0
<<< [pager] elided output (already shown): @0..301
<<< 
<<< alpha line 16
<<< alpha line 17
<<< alpha line 18
<<< alpha line 19
<<< alpha line 20
<<< alpha line 21
<<< alpha line 22
<<< alpha line 23
<<< alpha line 24
<<< alpha line 25
<<< alpha line 26
<<< alpha line 27
<<< alpha line 28
<<< alpha line 29
<<< alpha line 30
<<< alpha line 31
<<< alpha line 32
<<< alpha line 33
<<< alpha line 34
<<< alpha line 35
<<< alpha line 36
<<< 
<<< --More-- (Np, 22.1%, @301..595/2692)

4) r_repl timeout_ms=10000
>>> :hits beta
<<< #1 @955 Title
<<<   > > for (i in 1:60) cat("beta line ", i, "\n", sep = "")
<<< 
<<< --More-- (Np, 37.5%, @955..1010/2692)
