tests/snapshots/refactor_coverage__snapshots_restart_and_interrupt_with_plots.snap
---
source: tests/refactor_coverage.rs
expression: rendered
---
== session: restart_interrupt ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\nset.seed(1)\nplot(1:5, type = \"l\")\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "image",
      "mime_type": "image/png",
      "data_len": 0
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\nplot(5:1, type = \"l\")\ncat(\"plots_done\\n\")\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "image",
      "mime_type": "image/png",
      "data_len": 0
    },
    {
      "type": "text",
      "text": "plots_done\n> "
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\u0004"
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[repl] new session started"
    }
  ]
}
-- step 4 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "1+1\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[1] 2\n> "
    }
  ]
}
-- step 5 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "Sys.sleep(5)\n",
    "timeout_ms": 200
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "<<repl status: busy, write_stdin timeout reached; elapsed_ms=N>>"
    }
  ]
}
-- step 6 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\u0003",
    "timeout_ms": 5000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "stderr: \n"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 7 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "1+1\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[1] 2\n> "
    }
  ]
}
